--- a/src/input.css
+++ b/src/input.css
@@ -2,19 +2,165 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{}
-
 @layer utilities{
     html{
-        @apply overflow-x-hidden scroll-smooth scroll-pt-4;
+        overflow-x: hidden;
+        scroll-behavior: auto;
+        scroll-padding-top: 1rem; 
+    }
+    body {
+        background-color: #fff;
+        font-size: 16px;
+        overflow-x: hidden;
+        max-width: 1920px;
     }
     section {
-        @apply relative py-100 border-t-1 border-solid border-regal-gr-w;
+        /* @apply relative py-100 border-t-1 border-solid border-regal-gr-w w-full h-full; */
+        border-top: solid 1px #ececec;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        position: relative;
+        height: 100%;
+        width: 100%;
     }
     
     /* menu desktop header start */
+    header.desktop-header .site-title {
+        font-size: 24px;
+        font-weight: 900;
+        text-transform: uppercase;
+        font-family: 'Montserrat', sans-serif;
+    }
+    header.desktop-header .site-title:hover{
+        color:#9013fe;
+        transition: 0.3s;
+        cursor: pointer;
+    }
+    header.desktop-header .vertical-menu {
+        list-style: none;
+        padding: 0;
+        margin-bottom: 0;
+        cursor: pointer;
+    }
+    header.desktop-header .vertical-menu li {
+        padding: 8px 0;
+        position: relative;
+        list-style: none;
+        display: table;
+        -webkit-transition: all 0.2s ease-in-out;
+        -moz-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+    }
+    header.desktop-header .vertical-menu li a {
+        color: #000;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 14px;
+        font-weight: 700;
+        width: 100%;
+        text-transform: uppercase;
+        text-decoration: none;
+        position: relative;
+    }
     
+    nav .vertical-menu li.active::after {
+        content: "";
+        background: #9013FE;
+        width: 100%;
+        height: 7px;
+        left: 1px;
+        opacity: 0.5;
+        bottom: 11px;
+        position: absolute;
+        z-index: -1;
+    }
+    nav .vertical-menu li::after {
+        content: "";
+        background: #9013FE;
+        width: 100%;
+        height: 0;
+        left: 1px;
+        opacity: 0.5;
+        bottom: 11px;
+        position: absolute;
+        z-index: -1;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+    }
+    header.desktop-header .vertical-menu li a:after {
+        content: '';
+        background: #9013FE;
+        width: 100%;
+        height: 0;
+        left: 1px;
+        opacity: .5;
+        bottom: 0;
+        position: absolute;
+        z-index: -1;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+    }
+    header.desktop-header .vertical-menu li a:hover:after {
+        height: 7px;
+    }
+    header.desktop-header .social-items{
+        margin-top: 40px;
+        margin-bottom: 14px;
+    }
+    header.desktop-header .social-items li{
+        margin-right: 18.6px;
+        margin-left: -1px;
+    }
+    .list-inline-item a{
+        color: #000;
+    }
+    .social-items>li:hover a{
+        color: #9013FE;
+        transition: 0.3s;
+    }
+
+    
+    .mouse {
+        border: solid 3px #000;
+        border-radius: 16px;
+        display: block;
+        margin: auto;
+        height: 34px;
+        position: relative;
+        width: 25px;
+        cursor: pointer;
+    }
+    .mouse .wheel {
+        background: #000;
+        border-radius: 100%;
+        display: block;
+        position: absolute;
+        top: 8px;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 5px;
+        width: 5px;
+        -webkit-animation: ani-mouse 3s linear infinite;
+        -moz-animation: ani-mouse 3s linear infinite;
+        animation: ani-mouse 3s linear infinite;
+    }
+    @keyframes ani-mouse {
+        0% {
+            top: 29%;
+        }
+        15% {
+            top: 50%;
+        }
+        50% {
+            top: 50%;
+        }
+        100% {
+            top: 29%;
+        }  
+    }
     /* menu desktop header end */
+
 
     #return-to-top {
         position: fixed;
