--- a/src/input.css
+++ b/src/input.css
@@ -18,47 +18,19 @@
         border-top: solid 1px #ececec;
         padding-top: 100px;
         padding-bottom: 100px;
-        position: relative;
-        
+        position: relative; 
     }
     
-
-
     /* menu desktop header start */
-    /* header.desktop-header .site-title {
-        font-size: 24px;
-        font-weight: 900;
-        text-transform: uppercase;
-        font-family: 'Montserrat', sans-serif;
-    } */
-    /* header.desktop-header .site-title:hover{
-        color:#9013fe;
-        transition: 0.3s;
-        cursor: pointer;
-    } */
-    /* header.desktop-header .vertical-menu {
-        list-style: none;
-        padding: 0;
-        margin-bottom: 0;
-        cursor: pointer;
-    } */
+    header.desktop-header .site-title:hover{
+        transition:all 0.3s ease-in-out;
+    }
     header.desktop-header .vertical-menu li {
         -webkit-transition: all 0.2s ease-in-out;
         -moz-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
     }
-    /* header.desktop-header .vertical-menu li a {
-        color: #000;
-        font-family: 'Montserrat', sans-serif;
-        font-size: 14px;
-        font-weight: 700;
-        width: 100%;
-        text-transform: uppercase;
-        text-decoration: none;
-        position: relative;
-    } */
-    
-    nav .vertical-menu li.active::after {
+    nav .vertical-menu li.active:after {
         content: "";
         background: #9013FE;
         width: 100%;
@@ -69,7 +41,7 @@
         position: absolute;
         z-index: -1;
     }
-    nav .vertical-menu li::after {
+    nav .vertical-menu li:after {
         content: "";
         background: #9013FE;
         width: 100%;
@@ -84,62 +56,17 @@
         transition: all 0.3s ease-in-out;
     }
     header.desktop-header .vertical-menu li a:after {
-        content: '';
-        background: #9013FE;
-        width: 100%;
-        height: 0;
-        left: 1px;
-        opacity: .5;
-        bottom: 0;
-        position: absolute;
-        z-index: -1;
         -webkit-transition: all 0.3s ease-in-out;
         -moz-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
     }
-    /* header.desktop-header .vertical-menu li a:hover:after {
-        height: 7px;
-    } */
-    /* header.desktop-header .social-items{
-        margin-top: 40px;
-        margin-bottom: 14px;
-    } */
-    /* header.desktop-header .social-items li{
-        margin-right: 18.6px;
-        margin-left: -1px;
-    } */
-    /* .list-inline-item a{
-        color: #000;
-    } */
     .social-items>li:hover a{
-        color: #9013FE;
         transition:all 0.3s ease-in-out;
     }
     /* menu desktop header end */
     
-
-
     /* section home start */
-    /* .mouse {
-        border: solid 3px #000;
-        border-radius: 16px;
-        display: block;
-        margin: auto;
-        height: 34px;
-        position: relative;
-        width: 25px;
-        cursor: pointer;
-    } */
     .mouse .wheel {
-        /* background: #000;
-        border-radius: 100%;
-        display: block;
-        position: absolute;
-        top: 8px;
-        left: 40%;
-        transform: translateX(-50%);
-        height: 5px;
-        width: 5px; */
         -webkit-animation: ani-mouse 3s linear infinite;
         -moz-animation: ani-mouse 3s linear infinite;
         animation: ani-mouse 3s linear infinite;
@@ -159,8 +86,6 @@
         }  
     }
     /* section home end */
-
-
 
     /* section skills start */
     .skills-item .progress-bar {
@@ -221,8 +146,6 @@
     } 
     /* section skills end */
 
-
-
     /* section works start */
     .portfolio-filter li:after {
         -webkit-transition: all 0.3s ease-in-out;
@@ -238,7 +161,7 @@
         width: 100%;
         height: 7px;
         left: 0;
-        opacity: .5;
+        opacity: 0.5;
         bottom: 1px;
         position: absolute;
         z-index: -1;
@@ -255,12 +178,10 @@
         transform: translateY(40px);
         transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
     }
-   
     .portfolio-item .details span:last-child::after {
         content: "";
         margin-right: 0;
     }
-   
     .portfolio-item .mask {
         -webkit-transform: translateY(110%);
         -ms-transform: translateY(110%);
@@ -277,58 +198,124 @@
     }
     /* section works end */
 
-
-
     /* section blog start */
-    .blogs-item .thumbnail img{
-        transition:all 0.3s ease-in-out;
-    }
-    .blogs-item h4:hover{
-        transition:all 0.3s ease-in-out;
-    }
-    .blogs-item .meta .icon-names:hover{
+    .blogs-item .thumbnail img, .blogs-item h4:hover, .blogs-item .meta .icon-names:hover{
         transition:all 0.3s ease-in-out;
     }
     /* section blog end */
 
-
-
+    /* return to top start */
     #return-to-top {
-        position: fixed;
-        bottom: 40px;
-        right: 40px;
-        background: #000;
-        background: rgba(0, 0, 0, 0.5);
-        width: 40px;
-        height: 40px;
-        display: block;
-        text-decoration: none;
         -webkit-border-radius: 0;
         -moz-border-radius: 0;
-        border-radius: 0;
-        display: none;
-        z-index: 4;
         -webkit-transition: all 0.3s ease-in-out;
         -moz-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
-        cursor: pointer;
     }
     #return-to-top i {
-        color: #fff;
-        margin: 0;
-        position: relative;
-        left: 12px;
-        top: 8px;
-        font-size: 16px;
+        transform: translateY(0px);
         -webkit-transform: translateY(0px);
         -moz-transform: translateY(0px);
         -ms-transform: translateY(0px);
-        transform: translateY(0px);
         -webkit-transition: all 0.1s ease-in-out;
         -moz-transition: all 0.1s ease-in-out;
         transition: all 0.1s ease-in-out;
     }
-    #return-to-top:hover{
-        background:#9013FE;
+    /* return to top end */
+
+    /* button start */
+    .btn-animation {
+        display: inline-block;
+        vertical-align: middle;
+        box-shadow: 0 0 1px transparent;
+        position: relative;
+        -webkit-transform: perspective(1px) translateZ(0);
+        transform: perspective(1px) translateZ(0);
+        -webkit-transition-property: color;
+        transition-property: color;
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
     }
+    .btn-animation:before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        -webkit-transform: scaleY(0);
+        transform: scaleY(0);
+        -webkit-transform-origin: 50% 100%;
+        transform-origin: 50% 100%;
+        -webkit-transition-property: transform;
+        transition-property: transform;
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        -webkit-transition-timing-function: ease-out;
+        transition-timing-function: ease-out;
+    }
+    .btn-animation:hover:before, .btn-animation:focus:before, .btn-animation:active:before {
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
+    }
+    .btn {
+        border-radius: 0;
+        font-family: "Montserrat", sans-serif;
+        font-size: 14px;
+        font-weight: 900;
+        overflow: hidden;
+        line-height: 1;
+        padding: 15px 24px;
+        position: relative;
+        text-transform: uppercase;
+    }
+    .btn:focus {
+        box-shadow: none;
+        outline: 0;
+    }
+    .btn-default {
+        color: #FFF;
+        border: solid 3px #9013FE;
+        background: #9013FE;
+        display: inline-block;
+        vertical-align: middle;
+        position: relative;
+    }
+    .btn-default:hover, .btn-default:focus {
+        color: #9013FE;
+        border-color: #9013FE;
+    }
+    .btn-default:before {
+        background: #FFF;
+    }
+    .btn-alt {
+        color: #000;
+        background: transparent;
+        border: solid 3px #000;
+    }
+    .btn-alt:hover, .btn-alt:focus {
+        color: #FFF;
+        border-color: #000;
+    }
+    .btn-alt:before {
+        background: #000;
+    }
+    .btn-alt-light {
+        color: #FFF;
+        background: transparent;
+        border: solid 3px #FFF;
+    }
+    .btn-alt-light:hover, .btn-alt-light:focus {
+        color: #9013FE;
+        border-color: #FFF;
+    }
+    .btn-alt-light:before {
+        background: #FFF;
+    }
+    .btn-full {
+        text-align: center;
+        width: 100%;
+    }
+    /* button end */
 }
