--- a/src/input.css
+++ b/src/input.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 @layer utilities{
-    .nda-container{
+    /* .nda-container{
         @apply
-    }
+    } */
     html{
         overflow-x: hidden;
         scroll-behavior: auto;
