--- a/src/input.css
+++ b/src/input.css
@@ -15,7 +15,7 @@
         background-color: #fff;
         font-size: 16px;
         overflow-x: hidden;
-        max-width: 1920px;
+        /* max-width: 1920px; */
     }
     section {
         border-top: solid 1px #ececec;
