delete body at input.css

--- a/src/input.css
+++ b/src/input.css
@@ -11,12 +11,12 @@
         scroll-behavior: auto;
         scroll-padding-top: 1rem; 
     }
-    body {
+    /* body {
         background-color: #fff;
         font-size: 16px;
         overflow-x: hidden;
-        /* max-width: 1920px; */
-    }
+        max-width: 1920px;
+    } */
     section {
         border-top: solid 1px #ececec;
         padding-top: 100px;
