--- a/src/input.css
+++ b/src/input.css
@@ -286,6 +286,9 @@
         .blogs-info{
             flex-direction:column;
         }
+        .prices-item{
+            margin-bottom:30px;
+        }
     }
     /* custom button end */
 }
