--- a/src/input.css
+++ b/src/input.css
@@ -360,4 +360,76 @@
         }
     }
     /* custom button and responsive end */
+
+
+    #preloader{
+        background: #FFFFFF;
+        height: 100%;
+        position: fixed;
+        left:0;
+        top:0;
+        width:100%;
+        z-index:5;
+    }
+    #preloader .outer{
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%)
+    }
+    .mugi-folding-cube{
+        margin: auto;
+        width: 40px;
+        height: 40px;
+        position: relative;
+        -webkit-transform:rotateZ(45deg);
+        transform:rotateZ(45deg);
+    }
+    .mugi-folding-cube .mugi-cube{
+        float:left;
+        width:50%;
+        height:50%;
+        position:relative;
+        -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+    .mugi-folding-cube .mugi-cube:before{
+        content:"";
+        position: absolute;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        background-color:#9013FE;
+        -webkit-animation: mugi-foldCubeAngle 2.4s infinite linear both;
+        animation: mugi-foldCubeAngle 2.4s infinite linear both;
+        -webkit-transform-origin: 100% 100%;
+        -ms-transform-origin: 100% 100%;
+        transform-origin: 100% 100%;
+    }
+    .mugi-folding-cube .mugi-cube2{
+        -webkit-transform: scale(1.1) rotateZ(90deg);
+        transform: scale(1.1) rotateZ(90deg);
+    }
+    .mugi-folding-cube .mugi-cube2:before{
+        -webkit-animation-delay: 0.3s;
+        animation-delay: 0.3s;
+    }
+    .mugi-folding-cube .mugi-cube4{
+        -webkit-transform: scale(1.1) rotateZ(270deg);
+        transform: scale(1.1) rotateZ(270deg);
+    }
+    .mugi-folding-cube .mugi-cube4:before{
+        -webkit-transform-delay: 0.9s;
+        animation-delay: 0.9s;
+    }
+    .mugi-folding-cube .mugi-cube3{
+        -webkit-transfrom: scale(1.1) rotateZ(180deg);
+        transform: scale(1.1) rotateZ(180deg);
+    }
+    .mugi-folding-cube .mugi-cube3:before{
+        -webkit-animation-delay: 0.6s;
+        animation-delay: 0.6s;
+    }
 }
